Configure Docker, EC2 IPs, and AI Studio for deployment